--- a/style.css
+++ b/style.css
@@ -5,7 +5,17 @@
   margin: 0 auto;
   position: relative;
 }
-
+.user-info{
+  width: 10%;
+  margin-left: 43%;
+}
+#sliderTotal{
+  text-align: center;
+  color: #1e1743;
+  font-size: 20px;
+  width: 50%;
+  margin-left: 250px;
+}
 .gallery-header {
   display: none;
 }
